// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`encodeCursor > should encode columns, directions, and values as base64url 1`] = `
[
  [
    "createdAt",
    "id",
  ],
  [
    "ASC",
    "ASC",
  ],
  [
    "2024-01-01T00:00:00.000Z",
    "abc-123",
  ],
]
`;

exports[`encodeCursor > should handle null values 1`] = `
[
  [
    "name",
    "id",
  ],
  [
    "DESC",
    "ASC",
  ],
  [
    null,
    "abc",
  ],
]
`;

exports[`encodeCursor > should handle numeric values 1`] = `
[
  [
    "age",
    "id",
  ],
  [
    "ASC",
    "ASC",
  ],
  [
    25,
    100,
  ],
]
`;

exports[`encodeCursor > should handle single column 1`] = `
[
  [
    "id",
  ],
  [
    "ASC",
  ],
  [
    42,
  ],
]
`;
